--- a/views/admin/product/addProduct.ejs
+++ b/views/admin/product/addProduct.ejs
@@ -17,15 +17,6 @@
             <!-- <input type="hidden" name="_token" value="{!! csrf_token() !!}"> -->
 
             <div class="form-group">
-                <label>Thương hiệu</label>
-                <select class="form-control" name="brand" required>
-                    <option value="">Please Choose Brand</option>
-                  
-                      <option value="test">test</option>
-                      
-                </select>
-            </div>
-            <div class="form-group">
                 <label>Danh mục cấp 1</label>
                 <select class="form-control par-cate" name="cate1" required>
                     <option value="">Please Choose Category</option>
@@ -49,7 +40,11 @@
                 <select class="form-control" name="material" required>
                     <option value="">Please Choose Material</option>
                   
-                      <option value="test">test</option>
+                    <option value="Vải">Vải</option>
+                    <option value="Gỗ công nghiệp">Gỗ công nghiệp</option>
+                    <option value="Gỗ tự nhiên">Gỗ tự nhiên</option>
+                    <option value="Cao su tổng hợp">Cao su tổng hợp</option>
+                    <option value="Cao su thiên nhiên">Cao su thiên nhiên</option>
                    
                 </select>
             </div>
