--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -24,12 +24,11 @@
 </ul>
 
 <div id="tab1" class="tab-option">
-    <div style="margin-left: 2%;">
+    <div>
         <div class="col-lg-12">
             <h1 class="page-header">Product
                 <small>List</small>
                 <div style="float: right;">
-                    <a href="{!! url('admin/product/add_excel') !!}" class="btn btn-success" data-toggle="modal" data-target="#inputPro" style="font-size: 18px;"><i class="fas fa-upload" style="margin-right: 5px;"></i> Nhập danh sách</a>
                     <a href="/seller/product/add" class="btn btn-success" style="font-size: 18px;"><i class="fas fa-plus-square" style="margin-right: 5px;"></i> Thêm mới sản phẩm</a>
                 </div>
             </h1>
@@ -125,7 +124,7 @@
                                     <%-item.status == 0?'<p class="hidden-product">Đã ẩn</p>': '<p class="show-product">Đang bán</p>'%>
                                     <%}%>
                                 </div>
-                                <div>
+                                <div class="name-wrap-text">
                                     <p><%-item.name%></p>
                                 </div>
                                 <div class="sku-product">
@@ -146,7 +145,7 @@
                     <td> 
                         <%if (item.classify) {%>
                         <%item.classify.forEach(it => {%>
-                            <div>
+                            <div class="name-wrap-text">
                                 
                                 <% if (it.attribute.key) {%>
                                     <p>--</p>
@@ -192,8 +191,8 @@
                             </button>
                             <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                               <li><a href="" onclick="btnShow(this)" data-id="<%-item.id%>" data-status="<%-item.status%>"><%-item.status == 0? 'Hiển thị' : 'Ẩn'%></a></li>
-                              <li><a href="seller/product/edit/<%-item.id%>">Sửa</a></li>
-                              <li><a href="seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
+                              <li><a href="/seller/product/edit/<%-item.id%>">Sửa</a></li>
+                              <li><a href="/seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
                             </ul>
                           </div>
                     </td>
@@ -205,7 +204,7 @@
     </div>
 </div>
 <div id="tab2" class="tab-option">
-    <div style="margin-left: 2%;">
+    <div>
 
         <!-- /.col-lg-12 -->
         <table id="dataTables-example" class="mdl-data-table" style="width:100%">
@@ -255,7 +254,7 @@
                                     <%-item.status == 0?'<p class="hidden-product">Đã ẩn</p>': '<p class="show-product">Đang bán</p>'%>
                                     <%}%>
                                 </div>
-                                <div>
+                                <div class="name-wrap-text">
                                     <p><%-item.name%></p>
                                 </div>
                                 <div class="sku-product">
@@ -276,7 +275,7 @@
                     <td> 
                         <%if (item.classify) {%>
                         <%item.classify.forEach(it => {%>
-                            <div>
+                            <div class="name-wrap-text">
                                 
                                 <% if (it.attribute.key) {%>
                                     <p>--</p>
@@ -322,8 +321,8 @@
                             </button>
                             <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                               <li><a href="" onclick="btnShow(this)" data-id="<%-item.id%>" data-status="<%-item.status%>"><%-item.status == 0? 'Hiển thị' : 'Ẩn'%></a></li>
-                              <li><a href="seller/product/edit/<%-item.id%>">Sửa</a></li>
-                              <li><a href="seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
+                              <li><a href="/seller/product/edit/<%-item.id%>">Sửa</a></li>
+                              <li><a href="/seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
                             </ul>
                           </div>
                     </td>
@@ -336,7 +335,7 @@
     </div>
 </div>
 <div id="tab3" class="tab-option">
-    <div style="margin-left: 2%;">
+    <div>
     
         <!-- /.col-lg-12 -->
         <table id="dataTables-example" class="mdl-data-table" style="width:100%">
@@ -385,7 +384,7 @@
                                     <%-item.status == 0?'<p class="hidden-product">Đã ẩn</p>': '<p class="show-product">Đang bán</p>'%>
                                     <%}%>
                                 </div>
-                                <div>
+                                <div class="name-wrap-text">
                                     <p><%-item.name%></p>
                                 </div>
                                 <div class="sku-product">
@@ -406,7 +405,7 @@
                     <td> 
                         <%if (item.classify) {%>
                         <%item.classify.forEach(it => {%>
-                            <div>
+                            <div class="name-wrap-text">
                                 
                                 <% if (it.attribute.key) {%>
                                     <p>--</p>
@@ -452,8 +451,8 @@
                             </button>
                             <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                               <li><a href="" onclick="btnShow(this)" data-id="<%-item.id%>" data-status="<%-item.status%>"><%-item.status == 0? 'Hiển thị' : 'Ẩn'%></a></li>
-                              <li><a href="seller/product/edit/<%-item.id%>">Sửa</a></li>
-                              <li><a href="seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
+                              <li><a href="/seller/product/edit/<%-item.id%>">Sửa</a></li>
+                              <li><a href="/seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
                             </ul>
                           </div>
                     </td>
@@ -466,7 +465,7 @@
     </div>
 </div>
 <div id="tab4" class="tab-option">
-    <div style="margin-left: 2%;">
+    <div>
     
         <!-- /.col-lg-12 -->
         <table id="dataTables-example" class="mdl-data-table" style="width:100%">
@@ -561,8 +560,8 @@
                             </button>
                             <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                               <li><a href="" onclick="btnShow(this)" data-id="<%-item.id%>" data-status="<%-item.status%>"><%-item.status == 0? 'Hiển thị' : 'Ẩn'%></a></li>
-                              <li><a href="seller/product/edit/<%-item.id%>">Sửa</a></li>
-                              <li><a href="seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
+                              <li><a href="/seller/product/edit/<%-item.id%>">Sửa</a></li>
+                              <li><a href="/seller/product/edit/variant/<%-item.id%>">Cập nhật biến thể</a></li>
                             </ul>
                           </div>
                     </td>
