--- a/views/shop/cart/checkout.ejs
+++ b/views/shop/cart/checkout.ejs
@@ -203,7 +203,7 @@
           <div class="_1i3wS2 _1X3--o _3QL9JJ">Tổng thanh toán:</div>
           <div class="_1i3wS2 _20-5lO lsNObX _3QL9JJ"><%-VND(total + totalFee-voucherSale)%></div>
           <div class="_3Q9F5R _1Q3ggw">
-             <div class="_2xyh_G">Nhấn "Đặt hàng" đồng nghĩa với việc bạn đồng ý tuân theo <a href="https://shopee.vn/legaldoc/policies/" target="_blank" rel="noopener noreferrer">Điều khoản Shopee</a>
+             <div class="_2xyh_G">Nhấn "Đặt hàng" đồng nghĩa với việc bạn đồng ý tuân theo <a href="" target="_blank" rel="noopener noreferrer">Điều khoản Funiture Shop</a>
             </div>
              <form action="/checkout" method="POST">
                <input type="text" hidden name="arrAmount" value="<%-arrAmount%>">
