--- a/views/index.ejs
+++ b/views/index.ejs
@@ -435,7 +435,7 @@
 			 </div>
 		  </div>
 	   </section>
-	   <% if (userInfo) {%>
+	   <% if (recommend.length > 0) {%>
 	   <section id="home-featured-products" class="mg-top-60 mg-bottom-60">
 		<div class="wrapper">
 		   <div class="inner text-center">
