--- a/views/admin/product/addProduct.ejs
+++ b/views/admin/product/addProduct.ejs
@@ -45,7 +45,9 @@
                     <option value="Gỗ tự nhiên">Gỗ tự nhiên</option>
                     <option value="Cao su tổng hợp">Cao su tổng hợp</option>
                     <option value="Cao su thiên nhiên">Cao su thiên nhiên</option>
-                   
+                    <option value="Nhựa">Nhựa</option>
+                    <option value="Composite">Composite</option>
+                    <option value="Kim loại">Kim loại</option>
                 </select>
             </div>
             <div class="form-group">
