--- a/views/shop/product/products.ejs
+++ b/views/shop/product/products.ejs
@@ -114,22 +114,7 @@
                                 <label for="post-2" class="read-more-trigger"></label>
                             </div>
                         </div>
-                        <div class="filter_brand">
-                            <h5 class="filter_brand_text">Thương hiệu</h5>
-                            <div class="filter_brand_box">
-                                <ul class="filter_brand_ul clearfix">
-                                   
-                                    <li class="child_filter_brand_checkbox col-sm-6" style="float: left;">
-                                        <div class="checkboxFive">
-                                            <input type="checkbox" value="" id="checkboxFiveInput" name="group_brand[]"/>
-                                            <label for="checkboxFiveInput"></label>
-                                        </div>
-                                        <a class="brand_box" href=""><span class="brand_label"></span></a>
-                                    </li>
-                                   
-                                </ul>
-                            </div>
-                        </div>
+
                         <div class="filter_color">
                             <h5 class="filter_color_text">Màu sắc</h5>
                             <div class="filter_color_box">
@@ -421,7 +406,7 @@
                                             <span class="category-name"></span> 
                                             <div class="related-product-info">
                                                <div class="related-product-title">
-                                                   
+                                                   <%-item.name%>
                                                </div>
                                                <div class="related-product-rating col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                                 <div class="rating col-sm-8">
