--- a/public/stylesheets/css/home.css
+++ b/public/stylesheets/css/home.css
@@ -544,6 +544,7 @@ html[xmlns] .clearfix {
 .related-product-title {
 	margin-bottom: 10px;
 	text-align: center;
+	height: 37px;
 }
 .related-product-info .product-item-name {
     font-weight: 600;
