--- a/views/shop/product/products.ejs
+++ b/views/shop/product/products.ejs
@@ -377,7 +377,7 @@
                             </div>
                             <div class="div_number_products">
                                 <input type="hidden" id="category_id" value="<%-key%>">
-                                <h5 style="float: left;">Tìm thấy <%-product != ''? product.length : ''%> sản phẩm</h5>
+                                <h5 id="count_product" style="float: left;">Tìm thấy <%-product != ''? product.length : 0%> sản phẩm</h5>
                             </div>
                             <div class="custom_select_box">
                                 <select class="custom-select" id="SortBy" style="float: right;">
